# OpenGeodeWeb-Viewer

./: .dockerignore  .gitignore  .pypirc  CHANGELOG.md  COPYLEFT  Dockerfile  README.md  config.py  function.py  generate_schemas.js  log  mypy.ini  opengeodeweb-viewer.spec  opengeodeweb_viewer_schemas.json  package-lock.json  package.json  pyproject.toml  requirements-internal.in  requirements.in  requirements.txt  test_mypy_vtk.py  vtk_protocol.py  vtkw-server.py  vtkw_server.py
.github/workflows/: Branch-protection.yml  CD.yml  CI.yml  CICD.yml  config.json  deploy.yml  docker-images.yml  merge_request.yml  prepare_deploy.yml  prepare_pr.yml  schedule.yml  test.yml  test_pr.yml
rpc/schemas/: toggle_edge_visibility.json  update_data.json
schemas/: apply_textures.json  create_object_pipeline.json  create_visualization.json  delete_object_pipeline.json  get_point_position.json  point_size.json  reset.json  reset_camera.json  set_color.json  set_vertex_attribute.json  toggle_edge_visibility.json  toggle_object_visibility.json  toggle_point_visibility.json  update_data.json
src/opengeodeback_viewer/: vtk_protocol.py
src/opengeodeweb_viewer/: __init__.py  app.py  config.py  function.py  utils_functions.py  vtk_override_protocols.py  vtk_protocol.py  vtkw-server.py  vtkw_server.py
src/opengeodeweb_viewer/database/: connection.py
src/opengeodeweb_viewer/generic/: generic_protocols.py
src/opengeodeweb_viewer/object/: methods.py  object_methods.py  protocols.py
src/opengeodeweb_viewer/rpc/: utils_protocols.py
src/tests/: conftest.py  project.db  test_data_helpers.py  test_generic_protocols.py  test_mesh_protocols.py  test_model_protocols.py  test_object_protocols.py  test_protocol.py  test_viewer_protocols.py
src/tests/data/: cube.vtm  edged_curve.vtp  hybrid_solid.vtu  vertex_attribute.vtp
src/tests/mesh/: test_mesh_protocols.py
src/tests/model/: test_model_protocols.py
tests/: conftest.py  test_generic_protocols.py  test_protocol.py  test_protocols.py  test_utils_protocols.py  test_viewer_protocols.py
tests/data/: CrossSection.vtm  cube.vtm  edged_curve3D.vtp  emperor_penguin.vtp  hat_lambert2SG.vti  points.vtp  triangulated_surface2d.vtp  verts.vtp
tests/data/123456789/: attributed_edged_curve.vtp
tests/data/CrossSection/: Corner_00000000-1a02-45a2-8000-0000247024f4.vtp  Corner_00000000-9655-449f-8000-000006885621.vtp  Line_00000000-898c-47ff-8000-0000a5f2b19e.vtp  Line_00000000-f3c7-4f58-8000-00002d5cbee6.vtp  Surface_00000000-c4b6-47e6-8000-0000a9040e04.vtp
tests/data/cube/: Block_00000000-424a-4c63-8000-0000a002edd2.vtu  Corner_00000000-1ded-48e6-8000-0000d85a8662.vtp  Corner_00000000-3153-47da-8000-0000291b0bf7.vtp  Corner_00000000-3182-4037-8000-00007cf88fc7.vtp  Corner_00000000-9247-49ea-8000-000042150516.vtp  Corner_00000000-e6c2-4162-8000-0000fb6c4986.vtp  Corner_00000000-fa9f-4fb5-8000-0000e20d9e81.vtp  Line_00000000-00ee-4599-8000-000066f9bd67.vtp  Line_00000000-0166-4808-8000-0000390b1b36.vtp  Line_00000000-1744-469f-8000-00007e214117.vtp  Line_00000000-3189-4590-8000-0000f1535b82.vtp  Line_00000000-4720-43e1-8000-00003fb94879.vtp  Line_00000000-4ad0-406a-8000-0000b3688e4f.vtp  Line_00000000-57a7-45c5-8000-000074853b1a.vtp  Line_00000000-6ab5-4cf7-8000-0000070cb773.vtp  Line_00000000-6d4f-4d94-8000-0000db80bb99.vtp  Line_00000000-8fcc-4c7e-8000-00003f895b0f.vtp  Line_00000000-a3de-4f0b-8000-000026063086.vtp  Line_00000000-d368-4dbb-8000-00007ba8829b.vtp  Surface_00000000-0069-4b43-8000-0000f2ae1337.vtp  Surface_00000000-0759-4249-8000-0000243598ab.vtp  Surface_00000000-3ea7-4822-8000-00005386b514.vtp  Surface_00000000-5c26-4027-8000-0000bbb0481d.vtp  Surface_00000000-7a5a-4c72-8000-0000807ef000.vtp  Surface_00000000-e250-470d-8000-00006a6de472.vtp
tests/mesh/: test_mesh_protocols.py  test_mesh_scalar_range.py  test_mesh_scalar_range_lut.py
tests/mesh/cells/: test_mesh_cells_protocols.py
tests/mesh/edges/: test_mesh_edges_protocols.py
tests/mesh/points/: test_mesh_points_protocols.py
tests/model/: test_model_protocols.py
(+405 files in other folders)
