[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "OpenGeodeWeb-Back"
version = "3.3.1"
dynamic = ["dependencies"]
authors = [
  { name="Geode-solutions", email="team-web@geode-solutions.com" },
]
description = "OpenGeodeWeb-Back is an open source framework that proposes handy python functions and wrappers for the OpenGeode ecosystem"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Geode-solutions/OpenGeodeWeb-Back"
"Bug Tracker" = "https://github.com/Geode-solutions/OpenGeodeWeb-Back/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"opengeodeweb_back.routes.schemas" = ["*.json"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.branches.master]
match = "master"

[tool.semantic_release.branches.next]
match = "next"
prerelease = true
