[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "OpenGeodeWeb-Viewer"
version = "1.1.0"
dynamic = ["dependencies"]
authors = [
  { name="Geode-solutions", email="team-web@geode-solutions.com" },
]
description = "OpenGeodeWeb-Viewer is an open source framework that proposes handy python functions and wrappers for the OpenGeode ecosystem"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
gpu = ["vtk == 9.3.1"]

[project.urls]
"Homepage" = "https://github.com/Geode-solutions/OpenGeodeWeb-Viewer"
"Bug Tracker" = "https://github.com/Geode-solutions/OpenGeodeWeb-Viewer/issues"

[project.scripts]
opengeodeweb_viewer = "opengeodeweb_viewer.vtkw_server:run_server"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"opengeodeweb_viewer.rpc.generic.schemas" = ["*.json"]
"opengeodeweb_viewer.rpc.mesh.schemas" = ["*.json"]
"opengeodeweb_viewer.rpc.model.schemas" = ["*.json"]
"opengeodeweb_viewer.rpc.viewer.schemas" = ["*.json"]


[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.branches.master]
match = "master"

[tool.semantic_release.branches.next]
match = "next"
prerelease = true
